kube/prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wbi
  template:
    metadata:
      labels:
        app: wbi
    spec:
      containers:
        - image: ghcr.io/fourfridays/wagtail-batteries-included:latest
          name: wbi
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: wbi
  labels:
    app: wbi
spec:
  selector:
    app: wbi
  ports:
    - port: 8088
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wbi
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: wbi.fourfridays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wbi
                port:
                  number: 8088

# Deprecating Ingress Nginx due to performance issues
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-nginx
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   rules:
#   - host: wbi.fourfridays.com
#     http:
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: wbi
#               port:
#                 number: 8088
#   tls:
#     - hosts:
#         - wbi.fourfridays.com
#       secretName: wbi-tls
