kube/prod/prod-wbi-tls.yaml
# wbi-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wbi-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wbi.fourfridays.com`)
      services:
        - name: wbi
          port: 8088
  tls: # This route uses TLS
    certResolver: le # Uses our certificate resolver to get a certificate automatically!
